@@ -9,13 +9,16 @@ AC_SUBST(ATLAS_VERSION)
 
 # libtool versioning
 # LT_RELEASE=$MAJOR_VERSION.$MINOR_VERSION
-LT_CURRENT=1
-LT_REVISION=0
-LT_AGE=0
+ATLAS_CURRENT=1
+ATLAS_REVISION=2
+ATLAS_AGE=0
 
-INTERFACE_VERSION='-version-info 1:1:0'
+ATLAS_INTERFACE_VERSION_INFO=$ATLAS_CURRENT:$ATLAS_REVISION:$ATLAS_AGE
+ATLAS_INTERFACE_VERSION_NO=$ATLAS_CURRENT.$ATLAS_AGE.$ATLAS_REVISION
 
-AC_SUBST(INTERFACE_VERSION)    
+AC_SUBST(ATLAS_CURRENT)
+AC_SUBST(ATLAS_INTERFACE_VERSION_INFO)
+AC_SUBST(ATLAS_INTERFACE_VERSION_NO)
 
 AM_INIT_AUTOMAKE("Atlas-C++", "0.4.4.90")
 AM_CONFIG_HEADER(config.h)
